# skills

./: .gitignore  Cargo.toml  README.md  clippy.toml
.claude/skills/project-helper/: SKILL.md
docs/: spec.md
plan/: local.md  pack-import.md
plans/: ergo.md  todo.md
src/: catalog.rs  cli.rs  config.rs  diagnostics.rs  diff.rs  error.rs  frontmatter.rs  lib.rs  main.rs  palette.rs  paths.rs  skill.rs  status.rs  testutil.rs  tool.rs
src/commands/: diff.rs  edit.rs  import.rs  init.rs  list.rs  mod.rs  mv.rs  new.rs  pack.rs  promote.rs  pull.rs  push.rs  render.rs  show.rs  sync.rs  unload.rs  update.rs  uplift.rs  validate.rs
xtask/: Cargo.toml
xtask/src/: main.rs
