
[package]
name = "skills"
version = "0.0.1"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Manage agent skills"
license = "MIT"
repository = "https://github.com/cortesi/skills"
readme = "README.md"
keywords = ["agents", "claude", "codex"]



[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
dunce = "1.0.5"
inquire = "0.9.1"
minijinja = "2.14.0"
owo-colors = "4.2.3"
path-clean = "1.0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
shell-words = "1.1.1"
shellexpand = { version = "3.1.1", features = ["full"] }
similar = "2.7.0"
textwrap = "0.16"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"
url = "2.5"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }


[workspace]
members = ["xtask"]

[lints.rust]
missing_docs = "warn"

# Can't be used with any crate with examples or tests (!?). Best to enable this
# briefly, run cargo clippy (without --tests and --examples), fix unused deps,
# then disable it again.
# unused_crate_dependencies = "warn"

# unused_results = "warn"
# unreachable_pub = "warn"
# unqualified_local_imports = "warn"

[lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"

[dev-dependencies]
tempfile = "3.23.0"

# too_many_lines = "warn"
# multiple_crate_versions = "warn"
# module_name_repetitions = "warn"
# Not really usable - errors on names like min_x/min_y
# similar_names = "warn"
